Add absence request management features for teachers; implement AbsenceRequestsPage for reviewing and managing student absence requests, including status filtering and actions for approving or rejecting requests. Enhance UI with new styles and localization support for absence request statuses, improving user experience in the teacher dashboard.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -834,6 +834,52 @@
   "teacherSubjectDuration": "Duration",
   "teacherSubjectAssessmentType": "Assessment Type",
   "menuLessons": "Lessons",
+  "menuAbsenceRequests": "Absence Requests",
+  "absenceRequestsTitle": "Absence Requests",
+  "absenceRequestsSubtitle": "Review and manage student absence requests",
+  "absenceRequestsFilterAllSubjects": "All Subjects",
+  "absenceRequestsFilterAllGroups": "All Groups",
+  "absenceRequestsGroup": "Group",
+  "absenceRequestsFilterAllStatus": "All Status",
+  "absenceRequestsStatusPending": "Pending",
+  "absenceRequestsStatusApproved": "Approved",
+  "absenceRequestsStatusRejected": "Rejected",
+  "absenceRequestsStatusSubmitted": "Submitted",
+  "absenceRequestsStatusCanceled": "Canceled",
+  "absenceRequestsStatusAcknowledged": "Acknowledged",
+  "absenceRequestsStatusAttached": "Attached",
+  "absenceRequestsStudent": "Student",
+  "absenceRequestsDate": "Date",
+  "absenceRequestsSubject": "Subject",
+  "absenceRequestsStatus": "Status",
+  "absenceRequestsActions": "Actions",
+  "absenceRequestsActionView": "View",
+  "absenceRequestsActionReview": "Review",
+  "absenceRequestsLoadMore": "Load more",
+  "absenceRequestsErrorLoad": "Could not load absence requests",
+  "absenceRequestsNoNotices": "No absence requests",
+  "absenceRequestsDateFrom": "From date",
+  "absenceRequestsDateTo": "To date",
+  "absenceRequestsGoToLesson": "Go to lesson",
+  "absenceRequestsModalTitle": "Absence request",
+  "absenceRequestsApprove": "Approve",
+  "absenceRequestsReject": "Reject",
+  "absenceRequestsTeacherComment": "Comment (optional)",
+  "absenceRequestsTeacherCommentPlaceholder": "Add a comment for the student…",
+  "absenceRequestsNoticeTypeAbsent": "Absent",
+  "absenceRequestsNoticeTypeLate": "Late",
+  "absenceRequestsLessonType": "Lesson type",
+  "absenceRequestsSubjectName": "Subject",
+  "absenceRequestsReason": "Reason",
+  "absenceRequestsSubmittedAt": "Submitted",
+  "absenceRequestsRespondedAt": "Responded",
+  "absenceRequestsTeacherResponse": "Your response",
+  "absenceRequestsAttachments": "Attachments",
+  "absenceRequestsAttachmentsCount": "{{count}} file(s)",
+  "absenceRequestsSuccessApproved": "Request approved",
+  "absenceRequestsSuccessRejected": "Request rejected",
+  "absenceRequestsErrorRespond": "Could not save response",
+  "absenceRequestsClose": "Close",
   "lessonDetailsBackToLessons": "Back to Lessons",
   "lessonDetailsLessonMaterials": "Lesson Materials",
   "lessonDetailsHomeworkAssignment": "Homework Assignment",
