--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -834,6 +834,52 @@
   "teacherSubjectDuration": "Длительность",
   "teacherSubjectAssessmentType": "Тип контроля",
   "menuLessons": "Уроки",
+  "menuAbsenceRequests": "Заявки на отсутствие",
+  "absenceRequestsTitle": "Заявки на отсутствие",
+  "absenceRequestsSubtitle": "Просмотр и управление заявками студентов на отсутствие",
+  "absenceRequestsFilterAllSubjects": "Все предметы",
+  "absenceRequestsFilterAllGroups": "Все группы",
+  "absenceRequestsGroup": "Группа",
+  "absenceRequestsFilterAllStatus": "Все статусы",
+  "absenceRequestsStatusPending": "Ожидает",
+  "absenceRequestsStatusApproved": "Одобрено",
+  "absenceRequestsStatusRejected": "Отклонено",
+  "absenceRequestsStatusSubmitted": "Подано",
+  "absenceRequestsStatusCanceled": "Отменено",
+  "absenceRequestsStatusAcknowledged": "Принято к сведению",
+  "absenceRequestsStatusAttached": "Привязано",
+  "absenceRequestsStudent": "Студент",
+  "absenceRequestsDate": "Дата",
+  "absenceRequestsSubject": "Предмет",
+  "absenceRequestsStatus": "Статус",
+  "absenceRequestsActions": "Действия",
+  "absenceRequestsActionView": "Просмотр",
+  "absenceRequestsActionReview": "Рассмотреть",
+  "absenceRequestsLoadMore": "Загрузить ещё",
+  "absenceRequestsErrorLoad": "Не удалось загрузить заявки",
+  "absenceRequestsNoNotices": "Нет заявок на отсутствие",
+  "absenceRequestsDateFrom": "Дата с",
+  "absenceRequestsDateTo": "Дата по",
+  "absenceRequestsGoToLesson": "К занятию",
+  "absenceRequestsModalTitle": "Заявка на отсутствие",
+  "absenceRequestsApprove": "Принять",
+  "absenceRequestsReject": "Отклонить",
+  "absenceRequestsTeacherComment": "Комментарий (необязательно)",
+  "absenceRequestsTeacherCommentPlaceholder": "Добавьте комментарий для студента…",
+  "absenceRequestsNoticeTypeAbsent": "Отсутствие",
+  "absenceRequestsNoticeTypeLate": "Опоздание",
+  "absenceRequestsLessonType": "Тип занятия",
+  "absenceRequestsSubjectName": "Предмет",
+  "absenceRequestsReason": "Причина",
+  "absenceRequestsSubmittedAt": "Подано",
+  "absenceRequestsRespondedAt": "Ответ дан",
+  "absenceRequestsTeacherResponse": "Ваш ответ",
+  "absenceRequestsAttachments": "Вложения",
+  "absenceRequestsAttachmentsCount": "{{count}} файл(ов)",
+  "absenceRequestsSuccessApproved": "Заявка принята",
+  "absenceRequestsSuccessRejected": "Заявка отклонена",
+  "absenceRequestsErrorRespond": "Не удалось сохранить ответ",
+  "absenceRequestsClose": "Закрыть",
   "lessonDetailsBackToLessons": "К урокам",
   "lessonDetailsLessonMaterials": "Материалы урока",
   "lessonDetailsHomeworkAssignment": "Домашнее задание",
