--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -834,6 +834,52 @@
   "teacherSubjectDuration": "时长",
   "teacherSubjectAssessmentType": "考核类型",
   "menuLessons": "课程",
+  "menuAbsenceRequests": "缺勤申请",
+  "absenceRequestsTitle": "缺勤申请",
+  "absenceRequestsSubtitle": "查看和管理学生缺勤申请",
+  "absenceRequestsFilterAllSubjects": "全部科目",
+  "absenceRequestsFilterAllGroups": "全部班级",
+  "absenceRequestsGroup": "班级",
+  "absenceRequestsFilterAllStatus": "全部状态",
+  "absenceRequestsStatusPending": "待处理",
+  "absenceRequestsStatusApproved": "已批准",
+  "absenceRequestsStatusRejected": "已拒绝",
+  "absenceRequestsStatusSubmitted": "已提交",
+  "absenceRequestsStatusCanceled": "已取消",
+  "absenceRequestsStatusAcknowledged": "已确认",
+  "absenceRequestsStatusAttached": "已关联",
+  "absenceRequestsStudent": "学生",
+  "absenceRequestsDate": "日期",
+  "absenceRequestsSubject": "科目",
+  "absenceRequestsStatus": "状态",
+  "absenceRequestsActions": "操作",
+  "absenceRequestsActionView": "查看",
+  "absenceRequestsActionReview": "审核",
+  "absenceRequestsLoadMore": "加载更多",
+  "absenceRequestsErrorLoad": "无法加载缺勤申请",
+  "absenceRequestsNoNotices": "暂无缺勤申请",
+  "absenceRequestsDateFrom": "开始日期",
+  "absenceRequestsDateTo": "结束日期",
+  "absenceRequestsGoToLesson": "前往课程",
+  "absenceRequestsModalTitle": "缺勤申请",
+  "absenceRequestsApprove": "批准",
+  "absenceRequestsReject": "拒绝",
+  "absenceRequestsTeacherComment": "评论（选填）",
+  "absenceRequestsTeacherCommentPlaceholder": "给学生添加评论…",
+  "absenceRequestsNoticeTypeAbsent": "缺勤",
+  "absenceRequestsNoticeTypeLate": "迟到",
+  "absenceRequestsLessonType": "课程类型",
+  "absenceRequestsSubjectName": "科目",
+  "absenceRequestsReason": "原因",
+  "absenceRequestsSubmittedAt": "提交时间",
+  "absenceRequestsRespondedAt": "回复时间",
+  "absenceRequestsTeacherResponse": "您的回复",
+  "absenceRequestsAttachments": "附件",
+  "absenceRequestsAttachmentsCount": "{{count}} 个文件",
+  "absenceRequestsSuccessApproved": "申请已批准",
+  "absenceRequestsSuccessRejected": "申请已拒绝",
+  "absenceRequestsErrorRespond": "无法保存回复",
+  "absenceRequestsClose": "关闭",
   "lessonDetailsBackToLessons": "返回课程",
   "lessonDetailsLessonMaterials": "课程材料",
   "lessonDetailsHomeworkAssignment": "作业",
