Enhance attendance management features; implement student attendance roster in lesson details page, allowing teachers to view and manage student attendance statuses. Integrate API calls for fetching attendance data and updating student statuses, improving user experience in attendance tracking. Add localization support for attendance-related labels and messages.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -890,6 +890,7 @@
   "lessonDetailsDueDate": "Due Date",
   "lessonDetailsNoMaterials": "No materials",
   "lessonDetailsNoHomework": "No homework",
+  "lessonDetailsNoStudents": "No students in roster",
   "lessonDetailsRoomLabel": "Room",
   "lessonMaterialCreateTitle": "Create Lesson Material",
   "lessonMaterialEditTitle": "Edit Lesson Material",
@@ -950,5 +951,32 @@
   "homeworkDeleteError": "Failed to delete homework. Please try again.",
   "homeworkUntitled": "Untitled",
   "remove": "Remove",
-  "saving": "Saving…"
+  "saving": "Saving…",
+  "lessonAttendanceCarouselStudents": "Students",
+  "attendanceStatusColumn": "Status",
+  "attendanceStatusPresent": "Present",
+  "attendanceStatusAbsent": "Absent",
+  "attendanceStatusLate": "Late",
+  "attendanceStatusExcused": "Excused",
+  "attendanceStatusUnmarked": "—",
+  "attendanceMinutesLate": "Minutes late",
+  "attendanceMinutesLatePlaceholder": "0",
+  "attendanceSetPoints": "Set points",
+  "attendanceAbsenceNotice": "Absence notice",
+  "attendanceNoNotice": "—",
+  "attendanceViewRequests": "View requests",
+  "attendanceNoticeTypeAbsent": "Absent",
+  "attendanceNoticeTypeLate": "Late",
+  "attendanceNoticeStatusSubmitted": "Pending",
+  "attendanceNoticeStatusApproved": "Approved",
+  "attendanceNoticeStatusRejected": "Rejected",
+  "attendanceNoticeStatusCanceled": "Canceled",
+  "attendanceErrorLoad": "Failed to load attendance",
+  "attendanceSaveError": "Failed to save attendance",
+  "setPointsTitle": "Set points for lesson",
+  "setPointsStudentLabel": "Student",
+  "setPointsValueLabel": "Points",
+  "setPointsValuePlaceholder": "0",
+  "setPointsSave": "Save",
+  "setPointsNotAvailable": "Not available yet"
 }
