--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -890,6 +890,7 @@
   "lessonDetailsDueDate": "Срок сдачи",
   "lessonDetailsNoMaterials": "Нет материалов",
   "lessonDetailsNoHomework": "Нет домашних заданий",
+  "lessonDetailsNoStudents": "В списке нет студентов",
   "lessonDetailsRoomLabel": "Аудитория",
   "lessonMaterialCreateTitle": "Создать материал урока",
   "lessonMaterialEditTitle": "Редактировать материал урока",
@@ -950,5 +951,32 @@
   "homeworkDeleteError": "Не удалось удалить домашнее задание. Попробуйте снова.",
   "homeworkUntitled": "Без названия",
   "remove": "Удалить",
-  "saving": "Сохранение…"
+  "saving": "Сохранение…",
+  "lessonAttendanceCarouselStudents": "Студенты",
+  "attendanceStatusColumn": "Статус",
+  "attendanceStatusPresent": "Присутствовал",
+  "attendanceStatusAbsent": "Отсутствовал",
+  "attendanceStatusLate": "Опоздал",
+  "attendanceStatusExcused": "Уважительная",
+  "attendanceStatusUnmarked": "—",
+  "attendanceMinutesLate": "Минут опоздания",
+  "attendanceMinutesLatePlaceholder": "0",
+  "attendanceSetPoints": "Поставить баллы",
+  "attendanceAbsenceNotice": "Заявка об отсутствии",
+  "attendanceNoNotice": "—",
+  "attendanceViewRequests": "Смотреть заявки",
+  "attendanceNoticeTypeAbsent": "Отсутствие",
+  "attendanceNoticeTypeLate": "Опоздание",
+  "attendanceNoticeStatusSubmitted": "На рассмотрении",
+  "attendanceNoticeStatusApproved": "Принята",
+  "attendanceNoticeStatusRejected": "Отклонена",
+  "attendanceNoticeStatusCanceled": "Отменена",
+  "attendanceErrorLoad": "Не удалось загрузить посещаемость",
+  "attendanceSaveError": "Не удалось сохранить посещаемость",
+  "setPointsTitle": "Баллы за урок",
+  "setPointsStudentLabel": "Студент",
+  "setPointsValueLabel": "Баллы",
+  "setPointsValuePlaceholder": "0",
+  "setPointsSave": "Сохранить",
+  "setPointsNotAvailable": "Пока недоступно"
 }
