--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -890,6 +890,7 @@
   "lessonDetailsDueDate": "截止日期",
   "lessonDetailsNoMaterials": "暂无材料",
   "lessonDetailsNoHomework": "暂无作业",
+  "lessonDetailsNoStudents": "名单中暂无学生",
   "lessonDetailsRoomLabel": "教室",
   "lessonMaterialCreateTitle": "创建课程材料",
   "lessonMaterialEditTitle": "编辑课程材料",
@@ -950,5 +951,32 @@
   "homeworkDeleteError": "删除作业失败。请重试。",
   "homeworkUntitled": "未命名",
   "remove": "移除",
-  "saving": "保存中…"
+  "saving": "保存中…",
+  "lessonAttendanceCarouselStudents": "学生",
+  "attendanceStatusColumn": "状态",
+  "attendanceStatusPresent": "出席",
+  "attendanceStatusAbsent": "缺席",
+  "attendanceStatusLate": "迟到",
+  "attendanceStatusExcused": "请假",
+  "attendanceStatusUnmarked": "—",
+  "attendanceMinutesLate": "迟到分钟",
+  "attendanceMinutesLatePlaceholder": "0",
+  "attendanceSetPoints": "打分",
+  "attendanceAbsenceNotice": "缺勤说明",
+  "attendanceNoNotice": "—",
+  "attendanceViewRequests": "查看申请",
+  "attendanceNoticeTypeAbsent": "缺勤",
+  "attendanceNoticeTypeLate": "迟到",
+  "attendanceNoticeStatusSubmitted": "待处理",
+  "attendanceNoticeStatusApproved": "已批准",
+  "attendanceNoticeStatusRejected": "已拒绝",
+  "attendanceNoticeStatusCanceled": "已取消",
+  "attendanceErrorLoad": "加载考勤失败",
+  "attendanceSaveError": "保存考勤失败",
+  "setPointsTitle": "课堂得分",
+  "setPointsStudentLabel": "学生",
+  "setPointsValueLabel": "分数",
+  "setPointsValuePlaceholder": "0",
+  "setPointsSave": "保存",
+  "setPointsNotAvailable": "暂不可用"
 }
