Add homework submissions management features; implement LessonHomeworkSubmissionsTab for displaying student homework submissions, including file downloads and points management. Integrate API calls for fetching homework submissions data and enhance UI with localization support for submission-related labels, improving user experience in lesson management.

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -973,6 +973,12 @@
   "attendanceNoticeStatusCanceled": "Canceled",
   "attendanceErrorLoad": "Failed to load attendance",
   "attendanceSaveError": "Failed to save attendance",
+  "lessonHomeworkSubmissionsTab": "Homework submissions",
+  "lessonHomeworkSubmissionsStudent": "Student",
+  "lessonHomeworkSubmissionsFiles": "Files",
+  "lessonHomeworkSubmissionsSubmittedAt": "Submitted at",
+  "lessonHomeworkSubmissionsFilesModalTitle": "Submission files",
+  "lessonHomeworkSubmissionsFilesCount": "{{count}} files",
   "setPointsTitle": "Set points for lesson",
   "setPointsStudentLabel": "Student",
   "setPointsValueLabel": "Points",
