--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -973,6 +973,12 @@
   "attendanceNoticeStatusCanceled": "Отменена",
   "attendanceErrorLoad": "Не удалось загрузить посещаемость",
   "attendanceSaveError": "Не удалось сохранить посещаемость",
+  "lessonHomeworkSubmissionsTab": "Отправленные ДЗ",
+  "lessonHomeworkSubmissionsStudent": "Студент",
+  "lessonHomeworkSubmissionsFiles": "Файлы",
+  "lessonHomeworkSubmissionsSubmittedAt": "Время отправки",
+  "lessonHomeworkSubmissionsFilesModalTitle": "Файлы отправки",
+  "lessonHomeworkSubmissionsFilesCount": "{{count}} файлов",
   "setPointsTitle": "Баллы за урок",
   "setPointsStudentLabel": "Студент",
   "setPointsValueLabel": "Баллы",
