--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -973,6 +973,12 @@
   "attendanceNoticeStatusCanceled": "已取消",
   "attendanceErrorLoad": "加载考勤失败",
   "attendanceSaveError": "保存考勤失败",
+  "lessonHomeworkSubmissionsTab": "作业提交",
+  "lessonHomeworkSubmissionsStudent": "学生",
+  "lessonHomeworkSubmissionsFiles": "文件",
+  "lessonHomeworkSubmissionsSubmittedAt": "提交时间",
+  "lessonHomeworkSubmissionsFilesModalTitle": "提交文件",
+  "lessonHomeworkSubmissionsFilesCount": "{{count}} 个文件",
   "setPointsTitle": "课堂得分",
   "setPointsStudentLabel": "学生",
   "setPointsValueLabel": "分数",
